<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".methodsActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:paddingTop="25dp"
        app:srcCompat="@drawable/logo" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="func1"
        android:paddingTop="40dp">

        <ImageView
            android:layout_width="185dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/button"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/button"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="23dp"
            android:paddingTop="30dp"
            android:text="@string/method_1"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="MissingConstraints,RtlSymmetry" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="func2">

        <ImageView
            android:layout_width="185dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/button"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/button"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="23dp"
            android:paddingTop="30dp"
            android:text="@string/method_2"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="MissingConstraints,RtlSymmetry" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="func3">

        <ImageView
            android:layout_width="185dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/button"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/button"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="34dp"
            android:paddingTop="30dp"
            android:text="@string/method_3"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="MissingConstraints,RtlSymmetry" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="func4">

        <ImageView
            android:layout_width="185dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/button"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/button"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="27dp"
            android:paddingTop="30dp"
            android:text="@string/method_4"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="MissingConstraints,RtlSymmetry" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:onClick="mic">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:contentDescription="@string/button"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_mic_black_24dp"
            tools:ignore="MissingConstraints,RtlSymmetry" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:onClick="Stop">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginStart="292dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/button"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/stopbutton"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="320dp"
            android:paddingTop="10dp"
            android:text="@string/stop"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="MissingConstraints,RtlSymmetry" />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="returnToPreviousActivity">

        <ImageView
            android:layout_width="185dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/button"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/button"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="60dp"
            android:paddingTop="20dp"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="MissingConstraints,RtlSymmetry" />
    </RelativeLayout>



    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:contentDescription="@string/bar"
        app:srcCompat="@drawable/rectangle" />

</LinearLayout>