<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".creditsActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ImageView
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:srcCompat="@drawable/rectangle"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText"
        android:scaleType="fitXY"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            app:srcCompat="@drawable/rectangle"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText"
            android:scaleType="fitXY"/>
        <TextView
            android:paddingTop="45dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:text="@string/creditsText"
            tools:ignore="RtlSymmetry" />
    </RelativeLayout>


    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:srcCompat="@drawable/rectangle"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText"
        android:scaleType="fitXY"/>
    <RelativeLayout
        android:paddingTop="140dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="returnToPreviousActivity">

        <ImageView
            android:layout_width="185dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/button"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/button"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="60dp"
            android:paddingTop="50dp"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="MissingConstraints,RtlSymmetry" />
    </RelativeLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:contentDescription="@string/bar"
        app:srcCompat="@drawable/rectangle" />
</LinearLayout>